# genpipes

./: README.md  README.rst  pyproject.toml
.github/workflows/: contribute.yml  main.yml  release.yml
genpipes/: compose.py  declare.py
tests/: test_compose.py  test_declare.py  test_genpipes.py
