[tool.poetry]
name = "genpipes"
version = "0.1.1"
description = "Simple library to compose pipeline in the sklearn way thanks to generators"
authors = ["Matt G."]
repository = "https://github.com/Mg30/genpipes"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pandas = "^1.0,<1.2"
black = "^20.8b1"
numpy = "1.19.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

