[tool.poetry]
name = "genpipes"
version = "1.0.0"
description = "Simple library to compose pipeline in the sklearn way thanks to generators"
authors = ["Matt G."]
repository = "https://github.com/Mg30/genpipes"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pandas = "^1.5.3"
black = "^23.1.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

